--- a/website/src/assets/styles/main.css
+++ b/website/src/assets/styles/main.css
@@ -159,3 +159,13 @@ body {
 	border-color: #ffffff;
 	margin-left: 1%;
 }
+
+#river-image {
+	width: 40%;
+	height: 40%;
+}
+
+#empty-river-image {
+	width: 50%;
+	height: 35%;
+}
