--- a/website/src/assets/styles/main.css
+++ b/website/src/assets/styles/main.css
@@ -32,6 +32,14 @@ body {
 	padding: 20px;
 }
 
+#content-wrapper-vertical {
+	background: black;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+
+
 #river-image {
 	width: 30%;
 	height: auto;
@@ -86,6 +94,7 @@ body {
 	height: 100%;
 	position: absolute;
 }
+
 
 #river-svg-logo {
 	position: fixed;
@@ -159,6 +168,19 @@ body {
 	margin-left: 1%;
 }
 
+#about-button {
+	border-radius: 35px 30px 30px 35px;
+	text-align: center;
+	cursor: pointer;
+	font-size: 30px;
+	font-weight: 700;
+	width: 100%;
+	color: #6f6161;
+	background-color: #f4f4f4;
+	border-color: #ffffff;
+}
+
+
 #river-image {
 	width: 40%;
 	height: 40%;
@@ -168,3 +190,201 @@ body {
 	width: 50%;
 	height: 35%;
 }
+
+/* main.css */
+
+/* Стили для контейнера */
+.container {
+	max-width: 600px;
+	margin: 20px auto 0;
+	padding: 20px;
+	background-color: #f8f8f8;
+	border-radius: 8px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Стили для заголовка */
+h3 {
+	font-size: 24px;
+	color: #333;
+	margin-bottom: 10px;
+}
+
+/* Стили для текста */
+p {
+	font-size: 16px;
+	color: #666;
+	line-height: 1.5;
+	margin-bottom: 20px;
+}
+
+/* Стили для кнопок */
+button {
+	padding: 10px 20px;
+	font-size: 16px;
+	color: #fff;
+	background-color: #007bff;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+}
+
+button:hover {
+	background-color: #0056b3;
+}
+
+/* Дополнительные стили для кнопок */
+
+button:nth-child(2) {
+	position: relative;
+}
+
+/* Медиа-запрос для мобильных устройств */
+@media (max-width: 767px) {
+	.container {
+		padding: 10px;
+	}
+
+	h3 {
+		font-size: 20px;
+	}
+
+	p {
+		font-size: 14px;
+	}
+
+	button {
+		font-size: 14px;
+	}
+}
+
+#river-list {
+	margin: 20px 0;
+}
+
+h2 {
+	font-size: 24px;
+	margin-bottom: 15px;
+}
+
+.river-item {
+	margin-bottom: 20px;
+	border: 1px solid #ccc;
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.river-item a {
+	color: #007bff;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.river-item a:hover {
+	text-decoration: underline;
+}
+
+.territorial-unit {
+	margin-top: 5px;
+	font-weight: bold;
+}
+
+.territorial-list {
+	margin-top: 5px;
+	margin-left: 20px;
+	list-style: none;
+}
+
+.linear-scheme-header{
+	right: 170px;
+	top: -30px;
+	position: absolute;
+}
+
+footer {
+	margin-top: 50px;
+	text-align: center;
+}
+
+footer a {
+	text-decoration: none;
+	color: #007bff;
+	font-weight: bold;
+}
+
+footer a:hover {
+	text-decoration: underline;
+}
+
+.btn-center {
+	margin-top: 30px;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, 0px);
+}
+
+#river-info {
+	font-family: Arial, sans-serif;
+	padding: 20px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	background-color: #f9f9f9;
+	width: 800px; /* измените эту ширину по вашему усмотрению */
+	height: auto;
+	margin: 0 auto; /* чтобы контейнер был по центру страницы */
+}
+
+#river-info p {
+	margin-bottom: 10px;
+	font-weight: bold;
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+ul li {
+	margin-bottom: 5px;
+}
+
+a {
+	color: #007bff;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+/* Styling specific sections */
+#countries-river,
+#administrative-territorials-river,
+#origins-river,
+#mouths-river,
+#tributaries-river {
+	margin-left: 20px;
+}
+
+.image-offset {
+	margin-left: 20px; /* Adjust this value to your preference */
+}
+
+#countries-river,
+#administrative-territorials-river,
+#origins-river,
+#mouths-river,
+#tributaries-river,
+#length,
+#watershed-area {
+	margin-bottom: 15px;
+}
+
+#length,
+#watershed-area {
+	font-weight: bold;
+}
+
+
+
